# NeuralLog

./: .gitignore  Directory.Build.props  Directory.Packages.props  DiscordChatExporter.slnx  Readme.md  favicon.icns  pyproject.toml
.docs/: Docker.md  Scheduling-Linux.md  Scheduling-MacOS.md  Scheduling-Windows.md  Token-and-IDs.md  Using-the-CLI.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docker.yml  main.yml  pages.yml
DiscordChatExporter.Cli/: DiscordChatExporter.Cli.csproj  Program.cs
DiscordChatExporter.Cli.Tests/: DiscordChatExporter.Cli.Tests.csproj  Readme.md
DiscordChatExporter.Cli.Tests/Infra/: ChannelIds.cs  ExportWrapper.cs  Secrets.cs
DiscordChatExporter.Cli.Tests/Specs/: CsvContentSpecs.cs  DateRangeSpecs.cs  FilterSpecs.cs  HtmlAttachmentSpecs.cs  HtmlContentSpecs.cs  HtmlEmbedSpecs.cs  HtmlForwardSpecs.cs  HtmlGroupingSpecs.cs  HtmlMarkdownSpecs.cs  HtmlMentionSpecs.cs  HtmlReplySpecs.cs  HtmlStickerSpecs.cs  JsonAttachmentSpecs.cs  JsonContentSpecs.cs  JsonEmbedSpecs.cs  JsonEmojiSpecs.cs  JsonForwardSpecs.cs  JsonMentionSpecs.cs  JsonStickerSpecs.cs  PartitioningSpecs.cs  PlainTextContentSpecs.cs  (+2 more)
DiscordChatExporter.Core/: DiscordChatExporter.Core.csproj
DiscordChatExporter.Gui/: App.axaml  App.axaml.cs  DiscordChatExporter.Gui.csproj  Program.cs  PublishMacOSBundle.csx  StartOptions.cs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
neurallog/: __init__.py  api.py  cache.py  chunking.py  cli.py  discord_ingest.py  embeddings.py  evaluation.py  index.py  models.py  services.py
(+170 files in other folders)
